k8s-manifests-files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-appcontainer
          image: docker.io/rkvishnu77/demo-web:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-storage
              mountPath: /rails/storage
      volumes:
        - name: app-storage
          emptyDir: {}
