k8s-manifests-files/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-postgres-db
spec:
  serviceName: demo-postgres-db
  replicas: 1
  selector:
    matchLabels:
      app: demo-postgres-db
  template:
    metadata:
      labels:
        app: demo-postgres-db
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: demo-postgres-db
          image: postgres:14.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
