k8s-manifests-files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres-service
spec:
  selector:
    app: demo-postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
